// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grommet ThemeContext theme 1`] = `
.c1 {
  box-sizing: border-box;
  display: inline-flex;
  font-size: inherit;
  line-height: inherit;
  color: #000;
  font-weight: 600;
  text-decoration: none;
  cursor: pointer;
}

.c1:hover {
  text-decoration: underline;
}

.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 18px;
  line-height: 24px;
  background-color: #ffffff;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <a
    class="c1"
  >
    Hello
  </a>
</div>
`;

exports[`Grommet custom theme 1`] = `
.c4 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #7D4CDB;
  stroke: #7D4CDB;
}

.c4 g {
  fill: inherit;
  stroke: inherit;
}

.c4 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c4 *[stroke*='#'],
.c4 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c4 *[fill-rule],
.c4 *[FILL-RULE],
.c4 *[fill*='#'],
.c4 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c7 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #cc6633;
  stroke: #cc6633;
}

.c7 g {
  fill: inherit;
  stroke: inherit;
}

.c7 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c7 *[stroke*='#'],
.c7 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c7 *[fill-rule],
.c7 *[FILL-RULE],
.c7 *[fill*='#'],
.c7 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c10 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #6FFFB0;
  stroke: #6FFFB0;
}

.c10 g {
  fill: inherit;
  stroke: inherit;
}

.c10 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c10 *[stroke*='#'],
.c10 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c10 *[fill-rule],
.c10 *[FILL-RULE],
.c10 *[fill*='#'],
.c10 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #333333;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c5 {
  flex: 0 0 auto;
  align-self: stretch;
  width: 12px;
}

.c2 {
  box-sizing: border-box;
  display: inline-flex;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  text-decoration: none;
  cursor: pointer;
}

.c2:hover {
  text-decoration: underline;
}

.c6 {
  box-sizing: border-box;
  display: inline-flex;
  font-size: inherit;
  line-height: inherit;
  color: #cc6633;
  font-weight: 600;
  text-decoration: none;
  cursor: pointer;
}

.c6:hover {
  text-decoration: underline;
}

.c9 {
  box-sizing: border-box;
  display: inline-flex;
  font-size: inherit;
  line-height: inherit;
  color: #6FFFB0;
  font-weight: 600;
  text-decoration: none;
  cursor: pointer;
}

.c9:hover {
  text-decoration: underline;
}

.c12 {
  box-sizing: border-box;
  font-size: 22px;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: 50px;
  padding: 11px;
  font-weight: bold;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
}

.c12:focus {
  outline-offset: 2px;
  outline: 2px solid purple;
  box-shadow: 0 0 0px 2px blue inset;
  border-color: blue;
}

.c12:focus >circle,
.c12:focus >ellipse,
.c12:focus >line,
.c12:focus >path,
.c12:focus >polygon,
.c12:focus >polyline,
.c12:focus >rect {
  outline-offset: 2px;
  outline: 2px solid purple;
  box-shadow: 0 0 0px 2px blue inset;
  border-color: blue;
}

.c12:focus ::-moz-focus-inner {
  border: 0;
}

.c12::-webkit-input-placeholder {
  color: #cc6633;
}

.c12::-moz-placeholder {
  color: #cc6633;
}

.c12:-ms-input-placeholder {
  color: #cc6633;
}

.c12 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c12::-moz-focus-inner {
  border: none;
  outline: none;
}

.c12:-moz-placeholder,
.c12::-moz-placeholder {
  opacity: 1;
}

.c12::-webkit-input-placeholder {
  font-weight: normal;
}

.c12::-moz-placeholder {
  font-weight: normal;
}

.c12:-ms-input-placeholder {
  font-weight: normal;
}

.c11 {
  position: relative;
  width: 100%;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <a
      class="c2"
    >
      <span
        class="c3"
      >
        <svg
          aria-label="Add"
          class="c4"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 22V2M2 12h20"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
        <span
          class="c5"
        />
        Add
      </span>
    </a>
    <a
      class="c6"
    >
      <span
        class="c3"
      >
        <svg
          aria-label="Add"
          class="c7"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 22V2M2 12h20"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
        <span
          class="c5"
        />
        Add
      </span>
    </a>
  </div>
  <div
    class="c8"
  >
    <a
      class="c9"
    >
      <span
        class="c3"
      >
        <svg
          aria-label="Add"
          class="c10"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 22V2M2 12h20"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
        <span
          class="c5"
        />
        Add
      </span>
    </a>
    <a
      class="c6"
    >
      <span
        class="c3"
      >
        <svg
          aria-label="Add"
          class="c7"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 22V2M2 12h20"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
        <span
          class="c5"
        />
        Add
      </span>
    </a>
  </div>
  <div
    class="c1"
  >
    <div
      class="c11"
    >
      <input
        autocomplete="off"
        class="c12"
        placeholder="Placeholder"
        value="Value"
      />
    </div>
  </div>
</div>
`;

exports[`Grommet dark theme 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #FD6FFF;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #60EB9F;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #60EBE1;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #333333;
  color: #eeeeee;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #555555;
  color: #eeeeee;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #777777;
  color: #eeeeee;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #999999;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #FFCA58;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c10 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #F8F8F8;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c11 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #F2F2F2;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c12 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #EDEDED;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c13 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #DADADA;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c14 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #EB6060;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c15 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #01C781;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c16 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #6095EB;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c17 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #FF3333;
  color: #eeeeee;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c18 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #a8a8a8;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c19 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #7DD892;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c20 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #F7E464;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  font-size: 18px;
  line-height: 24px;
}

.c0 {
  font-family: Arial;
  font-size: 18px;
  line-height: 24px;
  background-color: #111111;
  color: #eeeeee;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      accent-1
    </span>
  </div>
  <div
    class="c3"
  >
    <span
      class="c2"
    >
      accent-2
    </span>
  </div>
  <div
    class="c4"
  >
    <span
      class="c2"
    >
      accent-3
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      brand
    </span>
  </div>
  <div
    class="c5"
  >
    <span
      class="c2"
    >
      dark-1
    </span>
  </div>
  <div
    class="c6"
  >
    <span
      class="c2"
    >
      dark-2
    </span>
  </div>
  <div
    class="c7"
  >
    <span
      class="c2"
    >
      dark-3
    </span>
  </div>
  <div
    class="c8"
  >
    <span
      class="c2"
    >
      dark-4
    </span>
  </div>
  <div
    class="c8"
  >
    <span
      class="c2"
    >
      dark-5
    </span>
  </div>
  <div
    class="c8"
  >
    <span
      class="c2"
    >
      dark-6
    </span>
  </div>
  <div
    class="c9"
  >
    <span
      class="c2"
    >
      focus
    </span>
  </div>
  <div
    class="c10"
  >
    <span
      class="c2"
    >
      light-1
    </span>
  </div>
  <div
    class="c11"
  >
    <span
      class="c2"
    >
      light-2
    </span>
  </div>
  <div
    class="c12"
  >
    <span
      class="c2"
    >
      light-3
    </span>
  </div>
  <div
    class="c13"
  >
    <span
      class="c2"
    >
      light-4
    </span>
  </div>
  <div
    class="c13"
  >
    <span
      class="c2"
    >
      light-5
    </span>
  </div>
  <div
    class="c13"
  >
    <span
      class="c2"
    >
      light-6
    </span>
  </div>
  <div
    class="c14"
  >
    <span
      class="c2"
    >
      neutral-1
    </span>
  </div>
  <div
    class="c15"
  >
    <span
      class="c2"
    >
      neutral-2
    </span>
  </div>
  <div
    class="c16"
  >
    <span
      class="c2"
    >
      neutral-3
    </span>
  </div>
  <div
    class="c17"
  >
    <span
      class="c2"
    >
      status-critical
    </span>
  </div>
  <div
    class="c18"
  >
    <span
      class="c2"
    >
      status-disabled
    </span>
  </div>
  <div
    class="c19"
  >
    <span
      class="c2"
    >
      status-ok
    </span>
  </div>
  <div
    class="c18"
  >
    <span
      class="c2"
    >
      status-unknown
    </span>
  </div>
  <div
    class="c20"
  >
    <span
      class="c2"
    >
      status-warning
    </span>
  </div>
</div>
`;

exports[`Grommet default theme 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #6FFFB0;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #FD6FFF;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #81FCED;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #7D4CDB;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #333333;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #555555;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #777777;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #999999;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c10 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #F8F8F8;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c11 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #F2F2F2;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c12 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #EDEDED;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c13 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #DADADA;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c14 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #00873D;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c15 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #3D138D;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c16 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #00739D;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c17 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #EB0000;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c18 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #CCCCCC;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c19 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #009E67;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c20 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #919191;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c21 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #C27B00;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  font-size: 18px;
  line-height: 24px;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      accent-1
    </span>
  </div>
  <div
    class="c3"
  >
    <span
      class="c2"
    >
      accent-2
    </span>
  </div>
  <div
    class="c4"
  >
    <span
      class="c2"
    >
      accent-3
    </span>
  </div>
  <div
    class="c5"
  >
    <span
      class="c2"
    >
      brand
    </span>
  </div>
  <div
    class="c6"
  >
    <span
      class="c2"
    >
      dark-1
    </span>
  </div>
  <div
    class="c7"
  >
    <span
      class="c2"
    >
      dark-2
    </span>
  </div>
  <div
    class="c8"
  >
    <span
      class="c2"
    >
      dark-3
    </span>
  </div>
  <div
    class="c9"
  >
    <span
      class="c2"
    >
      dark-4
    </span>
  </div>
  <div
    class="c9"
  >
    <span
      class="c2"
    >
      dark-5
    </span>
  </div>
  <div
    class="c9"
  >
    <span
      class="c2"
    >
      dark-6
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      focus
    </span>
  </div>
  <div
    class="c10"
  >
    <span
      class="c2"
    >
      light-1
    </span>
  </div>
  <div
    class="c11"
  >
    <span
      class="c2"
    >
      light-2
    </span>
  </div>
  <div
    class="c12"
  >
    <span
      class="c2"
    >
      light-3
    </span>
  </div>
  <div
    class="c13"
  >
    <span
      class="c2"
    >
      light-4
    </span>
  </div>
  <div
    class="c13"
  >
    <span
      class="c2"
    >
      light-5
    </span>
  </div>
  <div
    class="c13"
  >
    <span
      class="c2"
    >
      light-6
    </span>
  </div>
  <div
    class="c14"
  >
    <span
      class="c2"
    >
      neutral-1
    </span>
  </div>
  <div
    class="c15"
  >
    <span
      class="c2"
    >
      neutral-2
    </span>
  </div>
  <div
    class="c16"
  >
    <span
      class="c2"
    >
      neutral-3
    </span>
  </div>
  <div
    class="c17"
  >
    <span
      class="c2"
    >
      status-critical
    </span>
  </div>
  <div
    class="c18"
  >
    <span
      class="c2"
    >
      status-disabled
    </span>
  </div>
  <div
    class="c19"
  >
    <span
      class="c2"
    >
      status-ok
    </span>
  </div>
  <div
    class="c20"
  >
    <span
      class="c2"
    >
      status-unknown
    </span>
  </div>
  <div
    class="c21"
  >
    <span
      class="c2"
    >
      status-warning
    </span>
  </div>
</div>
`;

exports[`Grommet grommet theme 1`] = `
.c1 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
  font-weight: bold;
}

.c1:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c1:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c1:focus >circle,
.c1:focus >ellipse,
.c1:focus >line,
.c1:focus >path,
.c1:focus >polygon,
.c1:focus >polyline,
.c1:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c1:focus ::-moz-focus-inner {
  border: 0;
}

.c1:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c1:focus:not(:focus-visible) >circle,
.c1:focus:not(:focus-visible) >ellipse,
.c1:focus:not(:focus-visible) >line,
.c1:focus:not(:focus-visible) >path,
.c1:focus:not(:focus-visible) >polygon,
.c1:focus:not(:focus-visible) >polyline,
.c1:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c1:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c2 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
}

.c2:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c2:focus >circle,
.c2:focus >ellipse,
.c2:focus >line,
.c2:focus >path,
.c2:focus >polygon,
.c2:focus >polyline,
.c2:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c2:focus ::-moz-focus-inner {
  border: 0;
}

.c2:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c2:focus:not(:focus-visible) >circle,
.c2:focus:not(:focus-visible) >ellipse,
.c2:focus:not(:focus-visible) >line,
.c2:focus:not(:focus-visible) >path,
.c2:focus:not(:focus-visible) >polygon,
.c2:focus:not(:focus-visible) >polyline,
.c2:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c2:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 18px;
  line-height: 24px;
  background-color: #ffffff;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <button
    class="c1"
    type="button"
  >
    test
  </button>
  <button
    class="c2"
    type="button"
  >
    test
  </button>
</div>
`;

exports[`Grommet hpe theme 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #01a982;
  color: #ffffff;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: rgba(0, 0, 0, 0.04);
  color: #555555;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #ffffff;
  color: #555555;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #008567;
  color: #ffffff;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #00384d;
  color: #ffffff;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #bd8d09;
  color: #555555;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #7022ec;
  color: #ffffff;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #3e92cc;
  color: #555555;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c10 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #004233;
  color: #ffffff;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c11 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #ec3331;
  color: #ffffff;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c12 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #CCCCCC;
  color: #555555;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c13 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #009a71;
  color: #ffffff;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c14 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #8c8c8c;
  color: #555555;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c15 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #d36d00;
  color: #555555;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c16 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #555555;
  color: #ffffff;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  font-weight: undefined;
}

.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      brand
    </span>
  </div>
  <div
    class="c3"
  >
    <span
      class="c2"
    >
      background-contrast
    </span>
  </div>
  <div
    class="c4"
  >
    <span
      class="c2"
    >
      background-front
    </span>
  </div>
  <div
    class="c5"
  >
    <span
      class="c2"
    >
      control
    </span>
  </div>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      graph-0
    </span>
  </div>
  <div
    class="c6"
  >
    <span
      class="c2"
    >
      graph-1
    </span>
  </div>
  <div
    class="c7"
  >
    <span
      class="c2"
    >
      graph-2
    </span>
  </div>
  <div
    class="c8"
  >
    <span
      class="c2"
    >
      graph-3
    </span>
  </div>
  <div
    class="c9"
  >
    <span
      class="c2"
    >
      graph-4
    </span>
  </div>
  <div
    class="c10"
  >
    <span
      class="c2"
    >
      focus
    </span>
  </div>
  <div
    class="c11"
  >
    <span
      class="c2"
    >
      status-critical
    </span>
  </div>
  <div
    class="c12"
  >
    <span
      class="c2"
    >
      status-disabled
    </span>
  </div>
  <div
    class="c13"
  >
    <span
      class="c2"
    >
      status-ok
    </span>
  </div>
  <div
    class="c14"
  >
    <span
      class="c2"
    >
      status-unknown
    </span>
  </div>
  <div
    class="c15"
  >
    <span
      class="c2"
    >
      status-warning
    </span>
  </div>
  <div
    class="c16"
  >
    <span
      class="c2"
    >
      text
    </span>
  </div>
</div>
`;
